objects/Tx_Log__c.object
<CustomObject>
    <fields>
        <fullName>duration__c</fullName>
        <label>duration(ms)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>message__c</fullName>
        <label>message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>object_ID__c</fullName>
        <label>object ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Tx Logs</relationshipLabel>
        <relationshipName>Tx_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>originated__c</fullName>
        <label>originated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>user</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tx_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tx Log</label>
    <nameField>
        <label>Tx Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tx Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>type__c</columns>
        <columns>originated__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>P360_Job</fullName>
        <columns>NAME</columns>
        <columns>exception__c</columns>
        <columns>originated__c</columns>
        <columns>type__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>type__c</field>
            <operation>startsWith</operation>
            <value>P360</value>
        </filters>
        <label>P360 Job</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>P360_Job_LAST_3_DAYS</fullName>
        <columns>NAME</columns>
        <columns>exception__c</columns>
        <columns>originated__c</columns>
        <columns>type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>type__c</field>
            <operation>startsWith</operation>
            <value>P360</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:3</value>
        </filters>
        <label>P360 Job LAST 3 DAYS</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>P360_PartnerPortalUserRedesign_Logs</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>exception__c</columns>
        <columns>message__c</columns>
        <columns>object_ID__c</columns>
        <columns>opportunity__c</columns>
        <columns>type__c</columns>
        <columns>user__c</columns>
        <columns>originated__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>type__c</field>
            <operation>contains</operation>
            <value>P360_Contact_Job</value>
        </filters>
        <label>P360_PartnerPortalUserRedesign Logs</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>